--- a/src/sass/common/search_table.scss
+++ b/src/sass/common/search_table.scss
@@ -225,6 +225,7 @@ $e3:#e3e3e3;
                                 float: left;
                             }
                             input{
+                                line-height: 30px;
                                 float: left;
                                 height: 30px;
                                 border: 1px solid $e3;
