--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -11,6 +11,8 @@ html {
     height: 100%;
     min-height: 700px;
     position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .common {
