--- a/src/sass/common/search_table.scss
+++ b/src/sass/common/search_table.scss
@@ -14,9 +14,12 @@ $e3:#e3e3e3;
     box-shadow: 0px 1px 8px $e3;
 }
 
+
+html,body{
+    background-color: #edf1f2;
+}
 .page_bg_wrapper{
     background: #edf1f2;
-    margin: -10px;
     padding: 15px;
 }
 .search_item_wrapper{
@@ -114,6 +117,7 @@ $e3:#e3e3e3;
     }
     .more_item_wrapper{
         padding-top: 15px;
+        display: none;
         .sub_wrapper{
             position: relative;
             border: 1px solid $e3;
@@ -197,7 +201,11 @@ $e3:#e3e3e3;
                             }
                         }
                         .date,.peo_wrapper{
-                            .item{
+                            .itemBtn{
+                                float: left;
+                                position: relative;
+                                margin-right:36px;
+                                cursor: pointer;
                                 margin-left: 10px;
                                 width: 54px;
                                 text-align: center;
@@ -217,7 +225,7 @@ $e3:#e3e3e3;
                         .date{
                             float: left;
                             .diy{
-                                .active{
+                                &.active{
                                     color: $blue;
                                 }
                             }
@@ -300,8 +308,7 @@ $e3:#e3e3e3;
 .table_wrapper{
     @include wrapper_border;
     background:#fff;
-    min-height: 400px;
-    font-size: 40px;
+    //font-size: 40px;
     text-align: center;
-    line-height: 400px;
+    //line-height: 400px;
 }
