--- a/src/sass/event.scss
+++ b/src/sass/event.scss
@@ -15,7 +15,7 @@
     .event_map {
         #event_map {
             height: 600px;
-            display: none;
+            // display: none;
             border-bottom: 1px solid #ddd;
         }
         .bottom_btn {
@@ -184,6 +184,30 @@
         box-shadow: 2px 1px #e1e5e6;
         font-size: 14px;
         margin-top: 15px;
+        .location {
+            i {
+                display: inline-block;
+                width: 16px;
+                height: 20px;
+                background: url(/src/images/event/map.png) no-repeat;
+                vertical-align: middle;
+            }
+            .active {
+                background: url(/src/images/event/map_h.png) no-repeat;
+            }
+        }
+        .check {
+            i {
+                display: inline-block;
+                width: 22px;
+                height: 16px;
+                background: url(/src/images/event/look.png) no-repeat;
+                vertical-align: middle;
+            }
+            .active {
+                background: url(/src/images/event/look_h.png) no-repeat;
+            }
+        }
     }
 }
 
@@ -251,6 +275,25 @@
                         background: #fff;
                         min-height: 36px;
                         border-left: 1px solid #ddd;
+                        p {
+                            margin: 0;
+                        }
+                        #details_address_map {
+                            height: 200px;
+                            width: 100%;
+                            margin: 0 -10px;
+                            // display: none;
+                        }
+                    }
+                    .event_pic {
+                        overflow: hidden;
+                        .event_pic_list {
+                            float: left;
+                            border: 1px solid #f1f1f1;
+                            background: #fff;
+                            margin: 0 6px 10px 0;
+                            cursor: pointer;
+                        }
                     }
                 }
             }
@@ -428,6 +471,7 @@
 
 #event_address {
     @extend #details;
+    // display: block;
     width: 600px;
     height: 400px;
     margin-left: -300px;
@@ -435,12 +479,84 @@
     .modal-body {
         height: 310px;
         padding: 0;
+        position: relative;
         #address_map {
             width: 100%;
             height: 100%;
         }
+        .map_search {
+            position: absolute;
+            top: 10px;
+            height: 36px;
+            width: 100%;
+            .search_btn {
+                display: inline-block;
+                width: 64%;
+                line-height: 36px;
+                position: relative;
+                .search_btn_r {
+                    width: 80px;
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    button {
+                        width: 100%;
+                        background: #59b6fc;
+                        height: 36px;
+                        line-height: 36px;
+                        border: none;
+                        color: #fff;
+                        display: inline-block;
+                        border-radius: 0 18px 18px 0;
+                        text-align: center;
+                        padding: 0;
+                    }
+                }
+                .search_btn_l {
+                    width: auto;
+                    margin-right: 80px;
+                    input {
+                        width: 100%;
+                        height: 36px;
+                        border-radius: 18px 0 0 18px;
+                        border: 1px solid #e3e2e2;
+                        text-indent: 25px;
+                    }
+                    input::-webkit-input-placeholder {
+                        background: url(/src/images/event/search.png) 6px center no-repeat;
+                    }
+                    input:-moz-placeholder {
+                        background: url(/src/images/event/search.png) 6px center no-repeat;
+                    }
+                    input::-moz-placeholder {
+                        background: url(/src/images/event/search.png) 6px center no-repeat;
+                    }
+                    input:-ms-input-placeholder {
+                        background: url(/src/images/event/search.png) 6px center no-repeat;
+                    }
+                }
+            }
+        }
     }
     .modal-footer {
         background: #fff;
+        span {
+            display: inline-block;
+            margin-top: 7px;
+            height: 36px;
+            line-height: 36px;
+            vertical-align: middle;
+        }
+        input {
+            height: 36px;
+            text-indent: 10px;
+            margin-top: 7px;
+            vertical-align: middle;
+            width: 340px;
+        }
+        button {
+            background: #59b6fc;
+            color: #fff;
+        }
     }
 }
