--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,13 +1,7 @@
-body{
-    background: #344052;
-}
-.index_wrapper{
-    background: #f4f4f4;
-    margin-left: 200px;
-    margin-top: 80px;
-}
+
 .dashboard{
     border: 10px solid #f4f4f4;
+    background: #f4f4f4;
     border-bottom: none;
     .box{
         border: 10px solid #f4f4f4;
@@ -76,6 +70,7 @@ body{
                 overflow: hidden;
                 margin-bottom: 10px;
                 .box01{
+                    height: 85px;
                     padding: 8px;
                     text-align: center;
                     font-size: 12px;
@@ -126,6 +121,12 @@ body{
                         float:left;
                         &.record{
                             background: url(/src/images/index/t_record.png) no-repeat 5px 4px;
+                        }
+                        &.ask{
+                            background: url(/src/images/index/t_ask.png) no-repeat 5px 4px;
+                        }
+                        &.advise{
+                            background: url(/src/images/index/t_advise.png) no-repeat 5px 4px;
                         }
                     }
                     .content{
@@ -187,12 +188,19 @@ body{
                 }
                 .ceil{
                     display: inline-block;
+                    font-size: 12px;
                     width:50%;
                     .ceil_box{
                         padding-left: 30px;
                         width: 170px;
                         margin: 0 auto;
                         line-height: 36px;
+                        .numBtn{
+                            margin-left: 4px;
+                            color: white;
+                            padding:2px 4px;
+                            border-radius: 4px;
+                        }
                         &.e_all{
                             background: url(/src/images/index/e_all.png) no-repeat 2px center;
                             background-size: 20px;
@@ -200,14 +208,23 @@ body{
                         &.e_nature{
                             background: url(/src/images/index/e_nature.png) no-repeat 0 center;
                             background-size: 24px;
+                            .numBtn{
+                                background: #64bd63;
+                            }
                         }
                         &.e_other{
                             background: url(/src/images/index/e_other.png) no-repeat 0 center;
                             background-size: 24px;
+                            .numBtn{
+                                background: #9186e4;
+                            }
                         }
                         &.e_self{
                             background: url(/src/images/index/e_self.png) no-repeat 0 center;
                             background-size: 24px;
+                            .numBtn{
+                                background: #59b6fc;
+                            }
                         }
 
                     }
