--- a/src/sass/loginCommon.scss
+++ b/src/sass/loginCommon.scss
@@ -214,8 +214,9 @@ html {
     height: 32px;
     border: none;
     border-radius: 5px;
-    background: #ccc;
+    background: url(../images/forgetImg/code.jpg) no-repeat 0 center;
     text-align: center;
+    color: cyan;
     line-height: 32px;
     letter-spacing: 8px;
     font-size: 20px;
